docs/api/qiskit/0.35/qiskit.transpiler.passes.SetIOLatency.mdx
---
title: SetIOLatency (v0.35)
description: API reference for qiskit.transpiler.passes.SetIOLatency in qiskit v0.35
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.transpiler.passes.SetIOLatency
---

# SetIOLatency

<Class id="qiskit.transpiler.passes.SetIOLatency" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.20/qiskit/transpiler/passes/scheduling/scheduling/set_io_latency.py" signature="SetIOLatency(clbit_write_latency=0, conditional_latency=0)" modifiers="class">
  Bases: `qiskit.transpiler.basepasses.AnalysisPass`

  Set IOLatency information to the input circuit.

  The `clbit_write_latency` and `conditional_latency` are added to the property set of pass manager. These information can be shared among the passes that perform scheduling on instructions acting on classical registers.

  Once these latencies are added to the property set, this information is also copied to the output circuit object as protected attributes, so that it can be utilized outside the transilation, for example, the timeline visualization can use latency to accurately show time occupation by instructions on the classical registers.

  Create pass with latency information.

  **Parameters**

  *   **clbit\_write\_latency** (`int`) – A control flow constraints. Because standard superconducting quantum processor implement dispersive QND readout, the actual data transfer to the clbit happens after the round-trip stimulus signal is buffered and discriminated into quantum state. The interval `[t0, t0 + clbit_write_latency]` is regarded as idle time for clbits associated with the measure instruction. This defaults to 0 dt which is identical to Qiskit Pulse scheduler.
  *   **conditional\_latency** (`int`) – A control flow constraints. This value represents a latency of reading a classical register for the conditional operation. The gate operation occurs after this latency. This appears as a delay in front of the DAGOpNode of the gate. This defaults to 0 dt.

  ## Methods

  <span id="qiskit-transpiler-passes-setiolatency-name" />

  ### name

  <Function id="qiskit.transpiler.passes.SetIOLatency.name" signature="SetIOLatency.name()">
    Return the name of the pass.
  </Function>

  <span id="qiskit-transpiler-passes-setiolatency-run" />

  ### run

  <Function id="qiskit.transpiler.passes.SetIOLatency.run" signature="SetIOLatency.run(dag)">
    Add IO latency information.

    **Parameters**

    **dag** (`DAGCircuit`) – Input DAG circuit.
  </Function>

  ## Attributes

  ### is\_analysis\_pass

  <Attribute id="qiskit.transpiler.passes.SetIOLatency.is_analysis_pass">
    Check if the pass is an analysis pass.

    If the pass is an AnalysisPass, that means that the pass can analyze the DAG and write the results of that analysis in the property set. Modifications on the DAG are not allowed by this kind of pass.
  </Attribute>

  ### is\_transformation\_pass

  <Attribute id="qiskit.transpiler.passes.SetIOLatency.is_transformation_pass">
    Check if the pass is a transformation pass.

    If the pass is a TransformationPass, that means that the pass can manipulate the DAG, but cannot modify the property set (but it can be read).
  </Attribute>
</Class>

